--- a/schedule-jp.html
+++ b/schedule-jp.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2014">
+  <meta name="description" content="SamurAI Coding 2015-16">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2014</title>
+  <title>SamurAI Coding 2015-16</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -17,10 +17,10 @@
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li><a href="schedule-jp.html">日程</a></li>
-        <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ルール</a></li>
+        <li><a href="aboutgame-jp">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
         <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href="http://goo.gl/forms/pUwQG78Xlq">参加登録</a></li>
+        <li><a href=".">参加登録</a></li>
         <li><a href="preliminary-jp.html">予選</a></li>
         <li><a href="final-jp.html">決勝</a></li>
         <li><a href="faq-jp.html">FAQ</a></li>
@@ -34,11 +34,9 @@
     <section id="importantdates">
       <h2>主要日程</h2>
       <ul>
-        <li>ルール公開、応募受付開始：2014年11月14日</li>
-        <li>オンライン予選応募締切　：2015年 1月11日 Anywhere On Earth（日本時間 1月12日 21:00）（延長しました）</li>
-        <li>オンライン予選結果発表　：2015年1月14日</li>
-        <li>決勝（於 京都大学） 　　：2015年 3月18日　※<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会第77回全国大会併催</a></li>
-        <li><font color="red">決勝プログラム提出締切　：2015年 3月8日 Anywhere On Earth（日本時間 3月9日 21:00）</font></li>
+       <li>ルール公開、応募受付開始：2015年10月</li>
+        <li>オンライン予選　：2015年11月-2016年2月</li>
+        <li>決勝（於 慶應義塾大学） 　　：2015年3月11日　※<a href="http://www.ipsj.or.jp/event/taikai/778">情報処理学会第77回全国大会併催</a></li>
       </ul>
     </section>
 
@@ -50,51 +48,29 @@
           <section id="contact">
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
-          samurai2014-contact@ipsj.or.jp</a></p>
-          <img src="images/IPSJ_logoB_M.gif" title="logo_ipsj" width="200"/>
+            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
+          samurai2015-contact@ipsj.or.jp</a></p>
+          <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
           </section>
         </td>
         <td width="300">
           <section id="sponsors">
-            <h3>イベントスポンサー</h3>
-            <p>株式会社リクルートホールディングス</p>
-            <p><a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a></p>
-            <p>Indeed,Inc.</p>
-            <p><a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a></p>
-            <h3>ゴールドスポンサー</h3>
-            <p>株式会社いい生活</p>
-            <p><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
-            <p>株式会社日立製作所</p>
-            <p><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
+            <h3>イベントスポンサー</h3>(TBD)
+            <h3>ゴールドスポンサー</h3>(TBD)
           </section>
         </td>
         <td>
           <section id="supporters">
             <h3>協賛</h3>
             <p class="smaller">
-              一般社団法人 情報サービス産業協会<br>
-              一般社団法人 電子情報技術産業協会<br>
-              一般社団法人 電子情報通信学会<br>
-              一般社団法人 人工知能学会<br>
-              一般社団法人 日本ソフトウェア科学会<br>
-              一般社団法人 日本情報システム・ユーザー協会<br>
               IEEE-Computer Society<br>
-              IEEE-Computer Society Japan Chapter<br>
-              IEEE Japan Office<br>
-              京都大学 情報学研究科<br>
-              京都大学 学術情報メディアセンター<br>
-              財団法人 情報科学国際交流財団<br>
-              The Korean Institute of Information Scientists and Engineers<br>
+              (TBD)
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
             <p class="smaller">
-              独立行政法人 情報処理推進機構<br>
-              経済産業省<br>
-              外務省<br>
-              文部科学省
+            	(TBD)
             </p>
           </section>
         </td>
@@ -102,6 +78,8 @@
     </table>
   </div>
 </footer>
+
+
 
   </body>
 </html>
