--- a/sponsor-jp.html
+++ b/sponsor-jp.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2014">
+  <meta name="description" content="SamurAI Coding 2015-16">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2014</title>
+  <title>SamurAI Coding 2015-16</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -17,10 +17,10 @@
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li><a href="schedule-jp.html">日程</a></li>
-        <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ルール</a></li>
+        <li><a href="aboutgame-jp">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
         <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href="http://goo.gl/forms/pUwQG78Xlq">参加登録</a></li>
+        <li><a href=".">参加登録</a></li>
         <li><a href="preliminary-jp.html">予選</a></li>
         <li><a href="final-jp.html">決勝</a></li>
         <li><a href="faq-jp.html">FAQ</a></li>
@@ -34,24 +34,14 @@
     <section id="main">
       <h2>スポンサー募集</h2>
       <p>
-情報処理学会では2012年度より、新たな取り組みといたしまして、昨今
-のインターネット産業の急速な発展によるエンジニアの質と量の確保が
-ますます重要となるなか、若い世代から将来第一線の研究者や開発者に
-なりうる、また世界市場を舞台に活躍できる人材を育てることを開催の
-目的として、AIプログラミングコンテスト、
-IPSJ International AI Programming Contest "SamurAI Coding" を開催
-しております。
+情報処理学会では2012年度より、新たな取り組みといたしまして、昨今のインターネット産業の急速な発展によるエンジニアの質と量の確保が
+ますます重要となるなか、若い世代から将来第一線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人材を育てることを開催の
+目的として、AIプログラミングコンテスト、IPSJ International AI Programming Contest "SamurAI Coding" を開催しております。
       </p>
       <p>
-今年度も SamurAI Coding 2014-15 を開催いたします。ゲームをテーマ
-にしたプログラミングスキルを競います。世界規模の大会を目指し、世界
-中から参加者を募りネット上で予選を開催、予選を勝ち抜いたチームが
-2015年3月に日本で開催する決勝へ進みます。参加エンジニアはその能力
-が世界で通用するか本コンテストを通じて試すことができます。
-決勝では、アワードセレモニーも開催し、上位入賞者を表彰します。
-決勝進出者、スポンサー企業の皆様等との交流の場として懇親会の席も設
-ける予定です。
-ご賛同を頂ける場合には、<a href="https://www.ipsj.or.jp/02moshikomi/event/samurai_coding2014-15_sponsor.html">こちらの申込Webページ</a>よりお申込ください。
+今年度も SamurAI Coding 2015-16 を開催いたします。ゲームをテーマにしたプログラミングスキルを競います。世界規模の大会を目指し、世界中から参加者を募りネット上で予選を開催、予選を勝ち抜いたチームが2016年3月に日本で開催する決勝へ進みます。参加エンジニアはその能力が世界で通用するか本コンテストを通じて試すことができます。
+決勝では、アワードセレモニーも開催し、上位入賞者を表彰します。決勝進出者、スポンサー企業の皆様等との交流の場として懇親会の席も設ける予定です。
+ご賛同を頂ける場合には、こちらの申込Webページ よりお申込ください。
       </p>
     </section>
 
@@ -64,51 +54,29 @@ IPSJ International AI Programming Contest "SamurAI Coding" を開催
           <section id="contact">
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
-          samurai2014-contact@ipsj.or.jp</a></p>
-          <img src="images/IPSJ_logoB_M.gif" title="logo_ipsj" width="200"/>
+            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
+          samurai2015-contact@ipsj.or.jp</a></p>
+          <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
           </section>
         </td>
         <td width="300">
           <section id="sponsors">
-            <h3>イベントスポンサー</h3>
-            <p>株式会社リクルートホールディングス</p>
-            <p><a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a></p>
-            <p>Indeed,Inc.</p>
-            <p><a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a></p>
-            <h3>ゴールドスポンサー</h3>
-            <p>株式会社いい生活</p>
-            <p><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
-            <p>株式会社日立製作所</p>
-            <p><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
+            <h3>イベントスポンサー</h3>(TBD)
+            <h3>ゴールドスポンサー</h3>(TBD)
           </section>
         </td>
         <td>
           <section id="supporters">
             <h3>協賛</h3>
             <p class="smaller">
-              一般社団法人 情報サービス産業協会<br>
-              一般社団法人 電子情報技術産業協会<br>
-              一般社団法人 電子情報通信学会<br>
-              一般社団法人 人工知能学会<br>
-              一般社団法人 日本ソフトウェア科学会<br>
-              一般社団法人 日本情報システム・ユーザー協会<br>
               IEEE-Computer Society<br>
-              IEEE-Computer Society Japan Chapter<br>
-              IEEE Japan Office<br>
-              京都大学 情報学研究科<br>
-              京都大学 学術情報メディアセンター<br>
-              財団法人 情報科学国際交流財団<br>
-              The Korean Institute of Information Scientists and Engineers<br>
+              (TBD)
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
             <p class="smaller">
-              独立行政法人 情報処理推進機構<br>
-              経済産業省<br>
-              外務省<br>
-              文部科学省
+            	(TBD)
             </p>
           </section>
         </td>
