--- a/schedule-jp.html
+++ b/schedule-jp.html
@@ -36,7 +36,8 @@
       <ul>
        <li>ルール公開、応募受付開始：2015年10月</li>
         <li>オンライン予選　：2015年11月-2016年2月</li>
-        <li>決勝（於 慶應義塾大学） 　　：2016年3月11日　※<a href="http://www.ipsj.or.jp/event/taikai/78"><報処理学会第77回全国大会併催</a></li>
+        <li>決勝（於 慶應義塾大学） 　　：2016年3月11日　
+        ※<a href="http://www.ipsj.or.jp/event/taikai/78">情報処理学会第78回全国大会併催</a></li>
       </ul>
     </section>
 
