--- a/sponsor-jp.html
+++ b/sponsor-jp.html
@@ -41,7 +41,8 @@
       <p>
 今年度も SamurAI Coding 2015-16 を開催いたします。ゲームをテーマにしたプログラミングスキルを競います。世界規模の大会を目指し、世界中から参加者を募りネット上で予選を開催、予選を勝ち抜いたチームが2016年3月に日本で開催する決勝へ進みます。参加エンジニアはその能力が世界で通用するか本コンテストを通じて試すことができます。
 決勝では、アワードセレモニーも開催し、上位入賞者を表彰します。決勝進出者、スポンサー企業の皆様等との交流の場として懇親会の席も設ける予定です。
-ご賛同を頂ける場合には、こちらの申込Webページ よりお申込ください。
+さらにスポンサー種別によっては、参加者の企業見学の受け入れをご希望いただくことも可能です。
+ご賛同を頂ける場合には、<a href="https://www.ipsj.or.jp/02moshikomi/event/samurai_coding2015-16_sponsor.html">こちらの申込Webページ</a> よりお申込ください。
       </p>
     </section>
 
