--- a/index-jp.html
+++ b/index-jp.html
@@ -102,7 +102,7 @@
         本コンテストではAIプログラム同士をゲーム上で戦わせる対戦型AIプログラミングを実施します。
         参加者はプログラミングスキルに加えて、
         アルゴリズムやAIストラテジーの設計スキルで競い合います。
-        ゲーム内容「SamurAI 3×3（サムライ・スリー・オン・スリー）」は、
+        <a href="aboutgame-jp.html">ゲーム内容「SamurAI 3×3（サムライ・スリー・オン・スリー）」</a>は、
         異なる武器を使う3人のサムライが軍団を組み、同じく3人のサムライからなる相手軍団と対戦して、獲得した領地の広さを競うゲームです。競技参加者はそれぞれひとりのサムライの動作を決めるAIプログラムを作成、味方のサムライと協力してゲームを進めます。
       </p>
       <p>
