--- a/index.html
+++ b/index.html
@@ -45,10 +45,15 @@ aiming to cultivate the younger generation so they can become leading researcher
 	Participating engineers and programmers will be able to demonstrate their skills on a global level through this contest.</p>
     </section>
     
-    <section class="centered">
-      <img src="banner.png" width=100% />
-    </section>
-    
+        <table border="0">
+    	<tr><td><img src="banner.png" width=600 /><td>
+    		<td>
+    <a class="twitter-timeline" href="https://twitter.com/hashtag/samuraicoding" data-widget-id="641194496789626880">#samuraicoding のツイート</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>    
+</td>
+</tr>
+</table>
+
     <section id="sponsors">
     <h2>Sponsors</h2>
     (Call for Sponsors)
