--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ aiming to cultivate the younger generation so they can become leading researcher
 
     <section id="sponsors">
     <h2>Sponsors</h2>
-    (Call for Sponsors)
+    <a href="http://samuraicoding.info/sponsor-jp.html">Call for Sponsors in Japanese</a> is out! Please consider to support this exciting and valuable event!
     </section>
     <section id="news">
       <h2>News</h2>
