--- a/sponsor-jp.html
+++ b/sponsor-jp.html
@@ -70,6 +70,7 @@
           <section id="supporters">
             <h3>協賛</h3>
             <p class="smaller">
+              慶應義塾大学 理工学部 情報工学科<br>
               IEEE-Computer Society<br>
               (TBD)
             </p>
