--- a/aboutgame-en.html
+++ b/aboutgame-en.html
@@ -101,6 +101,7 @@
       	  <section id="supporters">
       	    <h3>Supporters</h3>
             <p class="smaller">
+              Department of Information and Computer Science, Faculty of Science and Technology, Keio University<br>
               IEEE-Computer Society<br>
               (TBD)
              </p>
