--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ aiming to cultivate the younger generation so they can become leading researcher
       	  <section id="supporters">
       	    <h3>Supporters</h3>
             <p class="smaller">
+              Department of Information and Computer Science, Faculty of Science and Technology, Keio University<br>
               IEEE-Computer Society<br>
               (TBD)
              </p>
