--- a/aboutgame-en.html
+++ b/aboutgame-en.html
@@ -32,7 +32,13 @@
     <img src="./banner.png" title="Banner" width=100%>
   </section>
   <section id="abstract">
-    <p><em>SamurAI 3x3</em> (three on three) is a game played with two corps each consisting of three samurai with different weapons, completing for obtain broader territory.  Each contestant provides an AI program that decides actions of one of the samurai, playing games cooperating with two other AI programs controlling other samurai.  The total score through many games, controling samurai with different weapons with combinations of different AI programs, decides the tournament results.</p>
+    <p><em>SamurAI 3x3</em> (three on three) is a game played with two corps each consisting of three samurai with different weapons, competing for
+broader territory. Each contestant provides an AI program that
+decides actions of one of the samurai, playing games cooperating with
+two other AI programs controlling other samurai. The total score through
+many games, controlling samurai with different weapons with combinations
+of different AI programs, decides the tournament results.
+</p>
     <p>A brief outline of the game is described below.  Note that game details might be tuned later for better game balance.</p>
   </section>
   <section id="main">
