--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <!--#include virtual="header.html" -->
 <header id="mast">
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/>
+  <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
+  <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="200"/></a>
   <nav id="global">
       <ul>
         <li><a href=".">Home</a></li>
