Add IEEE CS logo.

--- a/schedule-jp.html
+++ b/schedule-jp.html
@@ -13,11 +13,13 @@
     <!--#include virtual="header-jp.html" -->
 <header id="mast">
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/>
+  <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
+  <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a>
   <nav id="global">
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li><a href="schedule-jp.html">日程</a></li>
-        <li><a href="aboutgame-jp">ルール</a></li>
+        <li><a href="aboutgame-jp.html">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
         <li><a href="tutorial-jp.html">チュートリアル</a></li>
         <li><a href=".">参加登録</a></li>
@@ -56,23 +58,22 @@
         </td>
         <td width="300">
           <section id="sponsors">
-            <h3>イベントスポンサー</h3>(TBD)
-            <h3>ゴールドスポンサー</h3>(TBD)
+            <h3>イベントスポンサー</h3>
+            <h3>ゴールドスポンサー</h3>
           </section>
         </td>
         <td>
           <section id="supporters">
             <h3>協賛</h3>
             <p class="smaller">
-              慶應義塾大学 理工学部 情報工学科<br>
+              慶應義塾大学 理工学部 情報工学科<br><br>
               IEEE-Computer Society<br>
-              (TBD)
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a><br><br>
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
             <p class="smaller">
-            	(TBD)
             </p>
           </section>
         </td>
