--- a/tutorial.html
+++ b/tutorial.html
@@ -13,6 +13,8 @@
   <!--#include virtual="header.html" -->
 <header id="mast">
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/>
+  <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
+  <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a>
   <nav id="global">
       <ul>
         <li><a href=".">Home</a></li>
@@ -65,8 +67,9 @@
       	  <section id="supporters">
       	    <h3>Supporters</h3>
             <p class="smaller">
-              Department of Information and Computer Science, Faculty of Science and Technology, Keio University<br>
+              Department of Information and Computer Science, Faculty of Science and Technology, Keio University<br><br>
               IEEE-Computer Society<br>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a><br><br>
               (TBD)
              </p>
           </section>
