Added sponsors and dates.

--- a/aboutgame-en.html
+++ b/aboutgame-en.html
@@ -10,9 +10,12 @@
   </head>
   
   <header id="mast">
-  <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/>
+  <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
-  <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a>
+<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
+<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a>
   <nav id="global">
       <ul>
         <li><a href=".">Home</a></li>
@@ -99,10 +102,15 @@ of different AI programs, decides the tournament results.
       	</td>
       	<td width="300">
       	  <section id="sponsors">
-            <h3>Event Sponsor</h3>
-            <p>(TBD)</p>
             <h3>Gold Sponsors</h3>
-            <p>(TBD)</p>
+            <p>e-Seikatsu Co., Ltd.<br>
+            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
+            <h3>Supporters and Media Sponsors</h3>
+<p>Vocal School, Venus<br>
+<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
+</p>
+            <p>GSTYLUS<br>
+            <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
       	  </section>
       	</td>
       	<td>
