--- a/schedule.html
+++ b/schedule.html
@@ -12,9 +12,12 @@
   <body>
   <!--#include virtual="header.html" -->
 <header id="mast">
-  <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/>
+  <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
-  <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a>
+<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
+<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a>
   <nav id="global">
       <ul>
         <li><a href=".">Home</a></li>
@@ -33,10 +36,15 @@
 <hr/>
 
    <section id="importantdates">
-      <h2>Important Dates</h2>
+      <h2>Important Dates (TBD)</h2>
       <ul>
-<li>Rule and platform announcement: Oct 2015</li>
-      	<li>Preliminary round: Nov 2015 - Feb 2016</li>
+      	<li>Rule and platform announcement: Oct-Nov 2015</li>
+        <li>Due of 1st call for challenge of online preliminary round: Jan 8, 2016</li>
+        <li>Result announcement of 1st call for challenge of online preliminary round: Jan 18, 2016. Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
+</li>
+        <li>Due of 2nd call for challenge of online preliminary round: Feb 8, 2016</li>
+        <li>Result announcement of 2nd call for challenge of online preliminary round: Feb 18, 2016. Nine teams will be selected for the world final. Among them, up to three teams will be selected in consideration of diversity and geographical distribution (TBD). 
+</li>
         <li>World final round in Yokohama (collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>): March 11, 2016</li>
        </ul>
     </section>
@@ -61,10 +69,15 @@
       	</td>
       	<td width="300">
       	  <section id="sponsors">
-            <h3>Event Sponsor</h3>
-            <p>(TBD)</p>
             <h3>Gold Sponsors</h3>
-            <p>(TBD)</p>
+            <p>e-Seikatsu Co., Ltd.<br>
+            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
+            <h3>Supporters and Media Sponsors</h3>
+<p>Vocal School, Venus<br>
+<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
+</p>
+            <p>GSTYLUS<br>
+            <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
       	  </section>
       	</td>
       	<td>
