--- a/index.html
+++ b/index.html
@@ -96,17 +96,40 @@ aiming to cultivate the younger generation so they can become leading researcher
 <p>Further registration and submission procedures will be announced later. </p>
 
    <section id="prize">
-      <h2>Prize</h2>
+<h2>Prize</h2>
 
-      <p>
-      <b>For Preliminary round contestants (including World Finalists): </b>
-      </p>
+<p>
+<b>For Preliminary round contestants (including World Finalists): </b>
+</p>
 
-<p>(TBD)</p>
+<p>
+Preliminary round contestants are invited to Banquet on the World final round date on a first-come, 
+first-served basis; the number of Banquet participants is limited.
+</p>
+
+<p>
+Students can freely attend sessions of the <a href="http://www.ipsj.or.jp/event/taikai/78/">78th IPSJ Annual Convention by register themselves at the Convention site</a>.
+</p>
 
 <p><b>For World Finalists: </b></p>
 
-<p>(TBD)</p>
+<p>
+Winners of World Final will receive prizes totaling 100,000JPY (TBD). Moreover there will be some Sponsor Awards and Gifts (TBD).
+</p>
+
+<p>
+World Final contestants who are not IPSJ members will receive one-year IPSJ membership without any entry fee and annual fee. (The entry fee is originally necessary for IPSJ regular members.)
+</p>
+
+<p>
+Travel expenses of World final contestants will be partially supported. 
+Last year World final contestants from out side of Japan received travel expenses up to 100,000JPY, 
+and contestants from a long distance within Japan received full travel expenses.
+</p>
+
+<p>
+All World Final contestants will be presented on the contest site.	
+</p>
 
     </section>
 
