--- a/index-jp.html
+++ b/index-jp.html
@@ -101,13 +101,32 @@
       <b>予選応募者（決勝出場者を含む）</b>
 
 <p>
-	（詳細は後日掲載予定）
+予選応募者は、成績によらず決勝当日夜の懇親会に出席できます（ただし先着順、人数制限あり）。
+予選応募者や決勝出場者、スポンサー企業の皆様等との交流の場として懇親会を設けます。
+</p>
+
+<p>
+学生の方は、<a href="http://www.ipsj.or.jp/event/taikai/78/">全国大会申込サイト</a>で別途申し込むことで第78回全国大会を無料聴講できます。
 </p>
 
 <b>決勝出場者</b>
 
 <p>
-	（詳細は後日掲載予定）
+決勝における上位表彰者には総額10万円相当の副賞が提供されます。さらに、スポンサーから企業賞や景品が提供される予定です。
+</p>
+<p>
+決勝出場者については、情報処理学会非会員の場合に情報処理学会の入会金（正会員のみ）および一年間の会費が無料となり、
+一年間の会員権を得ます。
+会員権には、情報処理学会デジタルライブラリへのアクセス権利も含まれます。
+</p>
+
+<p>
+決勝出場者は、決勝への旅費補助を受けられます。昨年は、海外チームは10万円を上限として、
+国内チームは遠方からの参加の場合に実費相当を支援しました。今年は変更の可能性があります。
+</p>
+
+<p>
+決勝出場者は、コンテスト Web サイトに表彰されます。
 </p>
 
     </section>
