--- a/index-jp.html
+++ b/index-jp.html
@@ -112,7 +112,7 @@
 <b>決勝出場者</b>
 
 <p>
-決勝における上位表彰者には総額10万円相当の副賞が提供されます。さらに、スポンサーから企業賞や景品が提供される予定です。
+決勝における上位表彰者には総額10万円相当の副賞が提供されます（予定）。さらに、スポンサーから企業賞や景品が提供される予定です。
 </p>
 <p>
 決勝出場者については、情報処理学会非会員の場合に情報処理学会の入会金（正会員のみ）および一年間の会費が無料となり、
