--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <ul>
         <li><a href=".">Home</a></li>
         <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="http://arena.ai-comp.net/">Registration</a></li>
         <li><a href="aboutgame-en.html">Rules</a></li>
         <li><a href="software.html">Software</a></li>
         <li><a href="tutorial.html">Tutorial</a></li>
@@ -93,7 +94,8 @@ aiming to cultivate the younger generation so they can become leading researcher
       <h2>Registration and Submission</h2>
 
 <p>There is no age limit. Moreover contestants can participate in the contest as individual or team; there is no maximum number of team members.</p>
-<p>Further registration and submission procedures will be announced later. </p>
+<p>Please register your information on the <a href="http://arena.ai-comp.net/">registration server</a>. </p>
+<p>Further submission procedures will be announced later. </p>
 
    <section id="prize">
 <h2>Prize</h2>
