--- a/index-jp.html
+++ b/index-jp.html
@@ -21,6 +21,7 @@
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li><a href="schedule-jp.html">日程</a></li>
+        <li><a href="http://arena.ai-comp.net/">参加登録</a></li>
         <li><a href="aboutgame-jp.html">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
         <li><a href="tutorial-jp.html">チュートリアル</a></li>
@@ -77,6 +78,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+      	<li>11月24日: <a href="http://arena.ai-comp.net/">対戦サーバ</a>を公開しました。今のところアカウント登録のみが可能です。
       	<li>10月7日: <a href="schedule-jp.html">日程</a>が決まりました。予選通過のチャンスは2回、1次募集の締切は2016年1月8日の予定です。
       	<li>9月8日: <a href="sponsor-jp.html">スポンサー募集</a>を開始しました。
       	<li>9月8日: <a href="aboutgame-jp.html">ゲームルール案</a>を公開しました。
