--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
+      	  <li>Nov 24: <a href="http://arena.ai-comp.net/">Contest server</a> is opened! Currently, you can only register.
       	  <li>Oct 7: <a href="schedule.html">Schedule</a> has been announced. There will be two chances to advance to the world final. Due date of 1st chance is Jan 8, 2016(TBD). 
       	  <li>Sep 8: <a href="aboutgame-en.html">Preliminary game rule</a> is out!
           <li>Sep 8: This preliminary website has been launched.
@@ -94,7 +95,7 @@ aiming to cultivate the younger generation so they can become leading researcher
       <h2>Registration and Submission</h2>
 
 <p>There is no age limit. Moreover contestants can participate in the contest as individual or team; there is no maximum number of team members.</p>
-<p>Please register your information on the <a href="http://arena.ai-comp.net/">registration server</a>. </p>
+<p>Please register your information on the <a href="http://arena.ai-comp.net/">contest server</a>. </p>
 <p>Further submission procedures will be announced later. </p>
 
    <section id="prize">
