Add rules and software.

--- a/index-jp.html
+++ b/index-jp.html
@@ -21,11 +21,10 @@
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li><a href="schedule-jp.html">日程</a></li>
-        <li><a href="http://arena.ai-comp.net/">参加登録</a></li>
-        <li><a href="aboutgame-jp.html">ルール</a></li>
+        <li><a href="rules-jp.html">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
         <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href=".">参加登録</a></li>
+        <li><a href="http://arena.ai-comp.net/">参加登録</a></li>
         <li><a href="preliminary-jp.html">予選</a></li>
         <li><a href="final-jp.html">決勝</a></li>
         <li><a href="faq-jp.html">FAQ</a></li>
