--- a/software-jp.html
+++ b/software-jp.html
@@ -1,89 +1,27 @@
-<!DOCTYPE html>
 <html>
   <!--#include virtual="commonhead.html" -->
-<head>
-  <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2015-16">
-  <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2015-16</title>
-  <link rel="stylesheet" href="stylesheets/default.css">
-</head>
-
   <body>
     <!--#include virtual="header-jp.html" -->
-<header id="mast">
-  <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
-  <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>　　
-<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>　
-<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>　
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a>　<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a>  <nav id="global">
-      <ul>
-        <li><a href="index-jp.html">ホーム</a></li>
-        <li><a href="schedule-jp.html">日程</a></li>
-        <li><a href="aboutgame-jp.html">ルール</a></li>
-        <li><a href="software-jp.html">ソフトウェア</a></li>
-        <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href=".">参加登録</a></li>
-        <li><a href="preliminary-jp.html">予選</a></li>
-        <li><a href="final-jp.html">決勝</a></li>
-        <li><a href="faq-jp.html">FAQ</a></li>
-        <li><a href="sponsor-jp.html">スポンサー</a></li>
-        <li><a href="index.html">English</a></li>
-      </ul>
-  </nav>
-</header>
-<hr/>
-
     <section id="main">
-      <h2>ソフトウェア</h2>
-<p>(TBD)</p>
+      <header>
+	<h2>ソフトウェア</h2>
+      </header>
+      <p>SamurAI 3x3 ゲーム関連のソフトウェアとして、以下のものが公開されています。
+      <ul>
+	<li><a href="SamurAImanager-1124.tgz">
+	    SamurAI 3x3 ゲームの実行管理システム</a>:
+	  サムライを制御する AI プログラムを呼び出して、ルールにのっとってゲームの進行を管理します。
+	  いくつかの AI プログラムのサンプルも含まれています。
+	  システムやサンプル AI プログラムは C++11 で記述してあります。
+	</li>
+	<li><a href="SamurAI_Visualizer.jar">
+	    ゲームログの可視化ツール</a>:
+	  実行管理システムが出力するゲームログをグラフィカルに可視化するプログラムです。
+	  このツールは Java で記述してあります。
+	</li>
+	<li>今後、C++ 以外の言語で記述したサンプル AI プログラムも追加する予定です。</li>
+      </ul>
     </section>
-
-<footer>
-  <div>
-    <table class="multicolumn">
-      <tr>
-        <td width="250">
-          <section id="contact">
-            <h3>情報処理学会</h3>
-            <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
-          samurai2015-contact@ipsj.or.jp</a></p>
-          <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
-          </section>
-        </td>
-        <td width="300">
-          <section id="sponsors">
-            <h3>ゴールドスポンサー</h3>
-            <p>株式会社いい生活<br>
-            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
-            <h3>サポーター＆メディアスポンサー</h3>
-<p>ヴォーカル・スクール ヴィーナス<br>
-<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
-</p>
-            <p>株式会社ジースタイラス<br>
-            <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
-          </section>
-        </td>
-        <td>
-          <section id="supporters">
-            <h3>協賛</h3>
-            <p class="smaller">
-              慶應義塾大学 理工学部 情報工学科<br><br>
-              IEEE-Computer Society<br>
-<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a><br><br>
-            </p>
-          </section>
-          <section id="backers">
-            <h3>後援</h3>
-            <p class="smaller">
-            </p>
-          </section>
-        </td>
-      </tr>
-    </table>
-  </div>
-</footer>
-
+    <!--#include virtual="footer-jp.html" -->
   </body>
 </html>
