--- a/software.html
+++ b/software.html
@@ -1,93 +1,31 @@
-<!DOCTYPE html>
 <html>
   <!--#include virtual="commonhead.html" -->
-<head>
-  <meta charset="utf-8">
-  <meta name="Description" content="SamurAI Coding 2015-16">
-  <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2015-16</title>
-  <link rel="stylesheet" href="stylesheets/default.css">
-</head>
-
   <body>
-  <!--#include virtual="header.html" -->
-<header id="mast">
-  <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
-  <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
-<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
-<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a>
-<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a>
-  <nav id="global">
+    <!--#include virtual="header.html" -->
+    <section id="main">
+      <header>
+	<h2>Software</h2>
+      </header>
+      <p>The following software systems are currently available for
+	the SamurAI 3x3 game.</p>
       <ul>
-        <li><a href=".">Home</a></li>
-        <li><a href="schedule.html">Schedule</a></li>
-        <li><a href="aboutgame-en.html">Rules</a></li>
-        <li><a href="software.html">Software</a></li>
-        <li><a href="tutorial.html">Tutorial</a></li>
-        <li><a href=".">Entry</a></li>
-        <li><a href="preliminary.html">Prelminary</a></li>
-        <li><a href="final.html">Final</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="index-jp.html">Japanese</a></li>
+	<li><a href="SamurAImanager-1124.tgz">
+	    SamurAI 3x3 Game Management System</a>:
+	  Manages a SamurAI 3x3 game according to its rules, invoking
+	  AI programs to control samurai.
+	  Several sample AI programs are also included.
+	  The system and sample programs are written in C++11.
+	</li>
+	<li><a href="SamurAI_Visualizer.jar">
+	    Game Log Visualizer</a>:
+	  Graphical visualizer for game logs output by the game
+	  management system.
+	  This tool is written in Java.
+	</li>
+	<li>More sample AI programs written in languages other than
+	  C++ are in preparation.</li>
       </ul>
-  </nav>
-</header>
-<hr/>
-
-   <section id="main">
-      <h2>ソフトウェア</h2>
-
-<p>(TBD)</p>
-
     </section>
-
-<footer>
-  <div>
-    <table class="multicolumn">
-      <tr>
-      	<td width="250">
-      	  <section id="contact">
-      	    <h3>Information Processing Society of Japan</a></h3>
-      	    <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
-      	      1-5 Kanda-Surugadai, Chiyoda-ku,
-      	      Tokyo 101-0062 JAPAN<br>
-      	    email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
-
-      		  samurai2015-contact@ipsj.or.jp</a><br>
-            web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
-            </p>
-            <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
-      	  </section>
-      	</td>
-      	<td width="300">
-      	  <section id="sponsors">
-            <h3>Gold Sponsors</h3>
-            <p>e-Seikatsu Co., Ltd.<br>
-            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
-            <h3>Supporters and Media Sponsors</h3>
-<p>Vocal School, Venus<br>
-<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
-</p>
-            <p>GSTYLUS<br>
-            <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
-      	  </section>
-      	</td>
-      	<td>
-      	  <section id="supporters">
-      	    <h3>Supporters</h3>
-            <p class="smaller">
-              Department of Information and Computer Science, Faculty of Science and Technology, Keio University<br><br>
-              IEEE-Computer Society<br>
-<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a><br><br>
-              (TBD)
-             </p>
-          </section>
-      	</td>
-      </tr>
-    </table>
-  </div>
-</footer>
-
+    <!--#include virtual="footer.html" -->
   </body>
 </html>
