Rewrite English pages.

--- a/software.html
+++ b/software.html
@@ -1,11 +1,41 @@
 <html>
   <!--#include virtual="commonhead.html" -->
+<head>
+  <meta charset="utf-8">
+  <meta name="Description" content="SamurAI Coding 2015-16">
+  <meta name="author" content="Hironori Washizaki">
+  <title>SamurAI Coding 2015-16</title>
+  <link rel="stylesheet" href="stylesheets/default.css">
+</head>
+
   <body>
-    <!--#include virtual="header.html" -->
+  <!--#include virtual="header.html" -->
+<header id="mast">
+  <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
+  <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
+<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
+<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a>
+  <nav id="global">
+      <ul>
+        <li><a href=".">Home</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="rules.html">Rules</a></li>
+        <li><a href="software.html">Software</a></li>
+        <li><a href="tutorial.html">Tutorial</a></li>
+        <li><a href="http://arena.ai-comp.net/">Entry</a></li>
+        <li><a href="preliminary.html">Prelminary</a></li>
+        <li><a href="final.html">Final</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="index-jp.html">Japanese</a></li>
+      </ul>
+  </nav>
+</header>
+<hr/>
+
     <section id="main">
-      <header>
-	<h2>Software</h2>
-      </header>
+	  <h2>Software</h2>
       <p>The following software systems are currently available for
 	the SamurAI 3x3 game.</p>
       <ul>
