--- a/schedule.html
+++ b/schedule.html
@@ -22,10 +22,10 @@
       <ul>
         <li><a href=".">Home</a></li>
         <li><a href="schedule.html">Schedule</a></li>
-        <li><a href="aboutgame-en.html">Rules</a></li>
+        <li><a href="rules.html">Rules</a></li>
         <li><a href="software.html">Software</a></li>
         <li><a href="tutorial.html">Tutorial</a></li>
-        <li><a href=".">Entry</a></li>
+        <li><a href="http://arena.ai-comp.net/">Entry</a></li>
         <li><a href="preliminary.html">Prelminary</a></li>
         <li><a href="final.html">Final</a></li>
         <li><a href="faq.html">FAQ</a></li>
