Rewrite Japanese pages.

--- a/rules-jp.html
+++ b/rules-jp.html
@@ -1,11 +1,41 @@
+<!DOCTYPE html>
 <html>
   <!--#include virtual="commonhead.html" -->
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="SamurAI Coding 2015-16">
+  <meta name="author" content="Hironori Washizaki">
+  <title>SamurAI Coding 2015-16</title>
+  <link rel="stylesheet" href="stylesheets/default.css">
+</head>
+
   <body>
     <!--#include virtual="header-jp.html" -->
+<header id="mast">
+  <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
+  <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>　　
+<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>　
+<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>　
+<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a>　<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="120"/></a>  <nav id="global">
+      <ul>
+        <li><a href="index-jp.html">ホーム</a></li>
+        <li><a href="schedule-jp.html">日程</a></li>
+        <li><a href="rules-jp.html">ルール</a></li>
+        <li><a href="software-jp.html">ソフトウェア</a></li>
+        <li><a href="tutorial-jp.html">チュートリアル</a></li>
+        <li><a href="http://arena.ai-comp.net/">参加登録</a></li>
+        <li><a href="preliminary-jp.html">予選</a></li>
+        <li><a href="final-jp.html">決勝</a></li>
+        <li><a href="faq-jp.html">FAQ</a></li>
+        <li><a href="sponsor-jp.html">スポンサー</a></li>
+        <li><a href="index.html">English</a></li>
+      </ul>
+  </nav>
+</header>
+<hr/>
+
     <section id="main">
-      <header>
-	<h2>SamurAI Coding のルール</h2>
-      </header>
+	    <h2>SamurAI Coding のルール</h2>
       <p>SamurAI Coding はプログラマが AI プログラミングの技倆を競うコンテストです。
 	コンテストでは、それぞれ3人のサムライからなるふたつの軍団が <em>SamurAI 3x3</em> (サムライ スリー オン スリー) という名のゲームを戦い、各 AI プログラムはそのうちひとりのサムライを制御します。
 	コンテストでは異なる軍団の組合せで多くのゲームを戦い、最高の合計スコアをあげたサムライを制御するプログラムが勝者となります。</p>
