--- a/index-jp.html
+++ b/index-jp.html
@@ -154,7 +154,7 @@
         異なる武器を使う3人のサムライが軍団を組み、同じく3人のサムライからなる相手軍団と対戦して、獲得した領地の広さを競うゲームです。競技参加者はそれぞれひとりのサムライの動作を決めるAIプログラムを作成、味方のサムライと協力してゲームを進めます。
       </p>
       <p>
-        プログラミング言語としては、C++、Javagを含む様々な主要な言語に対応する予定です。
+        プログラミング言語としては、C++、Javaを含む様々な主要な言語に対応する予定です。
       </p>
     </section>
 
