--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@ All World Final contestants will be presented on the contest site.
  Ikuo Takeuchi, Shingo Takada, Matsuki Yoshino, Kazunori Sakamoto,
  Tetsuro Tanaka, Jun Nitta, Michiko Oba, Noriko Fukazawa
  </p>
+      <h2>Game Design Team</h2>
+      <p>Kazuma Hashimoto, Hirotaka Kameko, Yusei Kawakami, Yun-Ching Liu, Ryo Suzuki, Taisuke Yokoi
+</p>
     </section>
 
     <!--#include virtual="footer.html" -->
