--- a/index-jp.html
+++ b/index-jp.html
@@ -175,6 +175,15 @@
 大場みち子（はこだて未来大学）, 
 深澤紀子（鉄道総合技術研究所）
 </p>
+<h2>ゲーム開発チーム</h2>
+<p>
+亀甲 博貴（東京大学），
+川上 裕生（東京大学），
+鈴木 遼（早稲田大学），
+橋本 和真（東京大学），
+横井 泰佑（早稲田大学），
+劉 雲青（東京大学）	
+</p>
     </section>
 
     <!--#include virtual="footer-jp.html" -->
